# mergequeue-tool

./: Cargo.toml  README.md
.config/: mq.toml
.github/scripts/: write_github_json.py
.github/workflows/: pr_targets.yaml  prerelease.yaml  release.yaml  test.yml
.trunk/: trunk.yaml
bazel/foxtrot/: foxtrot.txt
src/: cli.rs  config.rs  config_error.rs  edit.rs  github.rs  lib.rs  main.rs  process.rs  pullrequest.rs  trunk.rs
test/alpha/: a.txt
test/beta/: b.txt
test/charlie/: c.txt
test/delta/: d.txt
test/files/: a.txt  b.txt  c.txt  d.txt
tests/: config_error_tests.rs  config_tests.rs  github.json  github_tests.rs  test_utils.rs  trunk_tests.rs
