[package]
name = "mq"
version = "0.0.0"
license = "MIT"
description = "mq - pull request generator for GitHub"
readme = "README.md"
edition = "2021"

[lib]
name = "gen"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive", "env"] }
env_logger = "0.11"
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.12"
confique = { version = "0.4", features = ["toml"] }
serde = "1.0.228"
toml = "0.9"
rand = "0.8.5"
walkdir = "2.5.0"
parse_duration = "2.1.1"
serde_json = "1.0.145"
chrono = "0.4.42"
reqwest = { version = "0.12", features = ["blocking", "native-tls-vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
